syntax = "proto3";

package gmq;

option go_package = "github.com/chowyu12/gmq/proto;gmq";

// GMQ Message Queue Service
service GMQService {
  // Bidirectional stream: produce and consume messages
  rpc Stream(stream StreamMessage) returns (stream StreamMessage);

  // Management interface: manually create Topic
  rpc CreateTopic(CreateTopicRequest) returns (CreateTopicResponse);
}

// Stream message wrapper
message StreamMessage {
  // Message type
  MessageType type = 1;
  
  // Specific message content (select corresponding field based on type)
  oneof payload {
    PublishRequest publish_req = 2;
    PublishResponse publish_resp = 3;
    SubscribeRequest subscribe_req = 4;
    SubscribeResponse subscribe_resp = 5;
    ConsumeMessage consume_msg = 6;
    AckRequest ack_req = 7;
    AckResponse ack_resp = 8;
    HeartbeatRequest heartbeat_req = 9;
    HeartbeatResponse heartbeat_resp = 10;
    ErrorResponse error_resp = 11;
    PullRequest pull_req = 12;
  }
}

// Message type
enum MessageType {
  MESSAGE_TYPE_UNSPECIFIED = 0;
  // Publish message request
  MESSAGE_TYPE_PUBLISH_REQUEST = 1;
  // Publish message response
  MESSAGE_TYPE_PUBLISH_RESPONSE = 2;
  // Subscribe request
  MESSAGE_TYPE_SUBSCRIBE_REQUEST = 3;
  // Subscribe response
  MESSAGE_TYPE_SUBSCRIBE_RESPONSE = 4;
  // Consume message push
  MESSAGE_TYPE_CONSUME_MESSAGE = 5;
  // Message acknowledgment request
  MESSAGE_TYPE_ACK_REQUEST = 6;
  // Message acknowledgment response
  MESSAGE_TYPE_ACK_RESPONSE = 7;
  // Heartbeat request
  MESSAGE_TYPE_HEARTBEAT_REQUEST = 8;
  // Heartbeat response
  MESSAGE_TYPE_HEARTBEAT_RESPONSE = 9;
  // Error response
  MESSAGE_TYPE_ERROR_RESPONSE = 10;
  // Client-initiated pull request
  MESSAGE_TYPE_PULL_REQUEST = 11;
}

// QoS level
enum QoS {
  // At most once (Fire and Forget)
  QOS_AT_MOST_ONCE = 0;
  // At least once (Acknowledged)
  QOS_AT_LEAST_ONCE = 1;
  // Exactly once
  QOS_EXACTLY_ONCE = 2;
}

// Publish message request (supports batch)
message PublishRequest {
  // Request ID
  string request_id = 1;
  // Message list
  repeated PublishItem items = 2;
}

message PublishItem {
  // Topic name
  string topic = 1;
  // Partition key (used to determine partition)
  string partition_key = 2;
  // Specify partition ID (optional, priority higher than partition_key)
  int32 partition_id = 3;
  // Message body
  bytes payload = 4;
  // Message properties
  map<string, string> properties = 5;
  // QoS level
  QoS qos = 6;
  // Producer idempotency support
  string producer_id = 7;
  int64 sequence_number = 8;
}

// Publish message response (supports batch)
message PublishResponse {
  // Request ID
  string request_id = 1;
  // Result list
  repeated PublishResult results = 2;
}

message PublishResult {
  // Whether successful
  bool success = 1;
  // Message ID
  string message_id = 2;
  // Topic name
  string topic = 3;
  // Actual partition ID
  int32 partition_id = 4;
  // Error message
  string error_message = 5;
}

// Subscribe request
message SubscribeRequest {
  // Request ID
  string request_id = 1;
  // Topic name
  string topic = 2;
  // Consumer group name
  string consumer_group = 3;
  // Consumer ID
  string consumer_id = 4;
  // QoS level
  QoS qos = 5;
  // List of subscribed partitions (empty means subscribe to all partitions)
  repeated int32 partitions = 6;
  // Pull interval (milliseconds), optional
  int32 pull_interval_ms = 7;
  // Client identifier, optional
  string client_id = 8;
}

// Manually create Topic request
message CreateTopicRequest {
  string topic = 1;
  int32 partitions = 2;
  int64 ttl_seconds = 3;
}

message CreateTopicResponse {
  bool success = 1;
  string error_message = 2;
}

// Subscribe response
message SubscribeResponse {
  // Request ID
  string request_id = 1;
  // Whether successful
  bool success = 2;
  // Assigned partition list
  repeated int32 assigned_partitions = 3;
  // Error message
  string error_message = 4;
}

// Consume message (supports batch push)
message ConsumeMessage {
  repeated MessageItem items = 1;
}

message MessageItem {
  // Message ID
  string message_id = 1;
  // Topic name
  string topic = 2;
  // Partition ID
  int32 partition_id = 3;
  // Offset
  int64 offset = 4;
  // Message body
  bytes payload = 5;
  // Message properties
  map<string, string> properties = 6;
  // Timestamp
  int64 timestamp = 7;
  // QoS level
  QoS qos = 8;
  // Partition routing key
  string key = 9;
}

// Message acknowledgment request (supports batch acknowledgment)
message AckRequest {
  // Request ID
  string request_id = 1;
  // Consumer group
  string consumer_group = 2;
  // Consumer ID
  string consumer_id = 3;
  // Acknowledgment item list
  repeated AckItem items = 4;
}

message AckItem {
  string topic = 1;
  int32 partition_id = 2;
  string message_id = 3;
  int64 offset = 4;
}

// Message acknowledgment response
message AckResponse {
  // Request ID
  string request_id = 1;
  // Whether successful
  bool success = 2;
  // Error message
  string error_message = 3;
}

// Heartbeat request
message HeartbeatRequest {
  // Consumer ID
  string consumer_id = 1;
  // Consumer group
  string consumer_group = 2;
}

// Heartbeat response
message HeartbeatResponse {
  // Whether successful
  bool success = 1;
}

// Error response
message ErrorResponse {
  // Error code
  int32 code = 1;
  // Error message
  string message = 2;
}

// Client-initiated pull message request
message PullRequest {
  string consumer_id = 1;
  string consumer_group = 2;
  string topic = 3;
  int32 limit = 4;
}
